<resources>
    <string name="app_name">PICApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="account">Account</string>
    <string name="create_games">Create Games</string>
    <string name="log_out">Log out</string>
    <string name="play">Play</string>
    <string name="modify">Modify</string>
    <string name="delete_account">Delete Account</string>
    <string name="home">Home</string>
    <string name="games">games</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="games_created">Games Created</string>
    <string name="logout">Log Out</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_in">sign in</string>
    <string name="create_a_new_account">create a new account</string>
    <string name="sign_up">sign up</string>
    <string name="confirm_password">confirm password</string>
    <string name="connect_board">Connect to board</string>
    <string name="username">username</string>
    <string name="playerinfo">PlayerInfo</string>
</resources>