<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_games">

    <fragment
        android:id="@+id/nav_games_created"
        android:name="com.example.picapplication.ui.gamecreated.GameCreatedFragment"
        android:label="@string/games_created"
        tools:layout="@layout/fragment_game_created" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.picapplication.ui.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_log_out"
        android:name="com.example.picapplication.ui.logout.LogOutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_log_out" />
    <fragment
        android:id="@+id/nav_games"
        android:name="com.example.picapplication.ui.GamesFragment"
        android:label="@string/games"
        tools:layout="@layout/fragment_games"/>
</navigation>